--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,6 @@ header-img: "img/contact-bg.jpg"
 
 <p>有任何的疑问，您可以关注我的微信公众号，并且留下您的疑问。如果我能回答的话，我会尽力在24小时内回复您。：）</p>
 
-<img src="img/learningByTeaching_QRCode.jpg">
+<img class="aligncenter" src="img/learningByTeaching_QRCode.jpg" >
 
 
